--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyD3p8oqXPLUvPSa7NtIbViTvggUS8pw27Y",
+      authDomain: "fichinhaderpg-115b9.firebaseapp.com",
+      projectId: "fichinhaderpg-115b9",
+      storageBucket: "fichinhaderpg-115b9.appspot.com",
+      messagingSenderId: "573948268829",
+      appId: "1:573948268829:web:8e72ceafcba72a6fc191f4"
     };
 
     // Initialize Firebase
